# scaling-RL-chess

./: .gitignore  DOCS.md  NOTES.md  README.md  pyproject.toml  requirements.txt
chessrl/: scorer.py
chessrl/players/: agent.py  model.py  netencoder.py  stockfish.py  ttmpt.py
chessrl/utils/: dataset.py  model.py
resources/: opening_book.json
scripts/: benchmark.py  games_to_positions.py  generate_game_data.py  train_agent.py  train_model.py  try_score_preds.py
src/chessrl/: __init__.py  agent.py  agentdistributed.py  benchmark.py  dataset.py  game.py  gameagent.py  gamestockfish.py  gen_data_stockfish.py  mctree.py  model.py  netencoder.py  player.py  predict_worker.py  scorer.py  scorerstockfish.py  selfplay.py  stockfish.py  supervised.py  ttmpt.py
src/chessrl/lib/: model.py
src/chessrl/model/: __init__.py  dataloader.py  encoder.py  model.py  train.py
src/chessrl/players/: __init__.py  agent.py  player.py  stockfish.py  ttmpt.py
src/chessrl/utils/: __init__.py  chess.py  math.py  plotting.py
src/ttmpRL/: __init__.py  dataset.py  game.py  scorer.py
src/ttmpRL/model/: __init__.py  dataloader.py  encoder.py  model.py  train.py  utils.py
src/ttmpRL/model/utils/: __init__.py  pathing.py
src/ttmpRL/players/: __init__.py  agent.py  player.py  stockfish.py  ttmpt.py
src/ttmpRL/utils/: __init__.py  chess.py  logger.py
src/webplayer/: README.md  gamewrapper.py  run.py
